# Team_Manager

./: .gitignore  CMakeLists.txt  CallUp.cpp  CallUp.h  CallUpPlayer.cpp  CallUpPlayer.h  CallUpPlayerStatistics.cpp  CallUpPlayerStatistics.h  Convocatoria.cpp  Convocatoria.h  Date.cpp  Date.h  Employee.cpp  Employee.h  Exceptions.h  FootbalPlayer.cpp  FootbalPlayer.h  FootballPlayer.cpp  FootballPlayer.h  FootballPlayers.txt  Game.cpp  Game.h  GameStats.cpp  GameStats.h  HashTable.cpp  HashTable.h  Main.cpp  Menu.cpp  Menu.h  NationalTeam.cpp  NationalTeam.h  People.txt  Person.cpp  Person.h  Person.txt  PlayerGameStatistics.cpp  PlayerGameStatistics.h  Presentation.pptx  StringManipulator.cpp  StringManipulator.h  (+11 more)
Files/: CallUp.txt  Game.txt  Games.txt  NationalTeam.txt  Person.txt  Providers.txt  Statistics.txt  Techicians.txt  ZAS.txt  x.txt
Outros/: Presentation.pptx
People/: Coach.cpp  Coach.h  FootballPlayer.cpp  FootballPlayer.h  Person.cpp  Person.h  Providers.cpp  Providers.h  Technician.cpp  Technician.h
display/: CallUpMenu.cpp  CallUpMenu.h  EconomiesMenu.cpp  EconomiesMenu.h  GameMenu.cpp  GameMenu.h  Menu.cpp  Menu.h  PeopleMenu.cpp  PeopleMenu.h  ProvidersMenu.cpp
html/: _call_up_8h_source.html  _call_up_player_statistics_8h_source.html  _date_8h_source.html  _exceptions_8h_source.html  _game_8h_source.html  _national_team_8h_source.html  _player_game_statistics_8h_source.html  _test_8h_source.html  _utilities_8h_source.html  annotated.html  class_call_up-members.html  class_call_up.html  class_call_up_player_statistics-members.html  class_call_up_player_statistics.html  class_date-members.html  class_date.html  class_exception_date-members.html  class_exception_date.html  class_game-members.html  class_game.html  class_game_dont_exists_call_up-members.html  class_game_dont_exists_call_up.html  class_game_exists_call_up-members.html  class_game_exists_call_up.html  class_inexistent_id-members.html  class_inexistent_id.html  class_invalid_date.html  (+27 more)
(+457 files in other folders)
